html outputs prints room and teachers

--- a/bin/output.html
+++ b/bin/output.html
@@ -14,15 +14,15 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
-		<td>Problem Based Learning (Lokale 3.14)</td>
 		<td>-</td>
-		<td>-</td>
-		<td>-</td>
+		<td>Linear Algebra (Auditorium 7) (Jacob Broe)</td>
+		<td>Imperative Programming (Auditorium 6) (Kurt Normark)</td>
+		<td>Linear Algebra (Lokale 3.14) (Jacob Broe)</td>
 		<td>-</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
-		<td>-</td>
+		<td>Linear Algebra (Auditorium 7) (Jacob Broe)</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
@@ -41,17 +41,17 @@
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
 		<td>-</td>
+		<td>Problem Based Learning (Lokale 3.14) (Lars Peter Jensen)</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
 		<td>-</td>
-		<td>-</td>
-		<td>Imperative Programming (Auditorium 6)</td>
-		<td>Imperative Programming (Auditorium 6)</td>
+		<td>Linear Algebra (Lokale 3.14) (Jacob Broe)</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
+		<td>Linear Algebra (Lokale 3.14) (Jacob Broe)</td>
 		<td>-</td>
 		<td>-</td>
-		<td>Problem Based Learning (Lokale 3.14)</td>
-		<td>Linear Algebra (Auditorium 6)</td>
+		<td>-</td>
 		<td>-</td>
 	</tr>
 </table>
@@ -67,7 +67,7 @@
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
 		<td>-</td>
-		<td>-</td>
+		<td>Imperative Programming (Lokale 3.14) (Kurt Normark)</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
@@ -75,8 +75,8 @@
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
-		<td>Imperative Programming (Lokale 3.14)</td>
-		<td>Linear Algebra (Lokale 3.14)</td>
+		<td>-</td>
+		<td>Imperative Programming (Lokale 3.14) (Kurt Normark)</td>
 		<td>-</td>
 		<td>-</td>
 	</tr>
@@ -92,18 +92,18 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
+		<td>Imperative Programming (Auditorium 7) (Kurt Normark)</td>
+		<td>-</td>
+		<td>Linear Algebra (Lokale 3.14) (Jacob Broe)</td>
 		<td>-</td>
 		<td>-</td>
-		<td>-</td>
-		<td>Problem Based Learning (Auditorium 6)</td>
-		<td>Linear Algebra (Lokale 3.14)</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
-		<td>-</td>
+		<td>Problem Based Learning (Lokale 3.14) (Lars Peter Jensen)</td>
 		<td>-</td>
 	</tr>
 </table>
@@ -118,19 +118,19 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
-		<td>Linear Algebra (Auditorium 6)</td>
-		<td>-</td>
+		<td>Linear Algebra (Auditorium 7) (Jacob Broe)</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
-		<td>Problem Based Learning (Auditorium 6)</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
-		<td>Linear Algebra (Auditorium 6)</td>
+		<td>-</td>
+		<td>Imperative Programming (Lokale 3.14) (Kurt Normark)</td>
 	</tr>
 </table>
 <table width="100.00%" cellspacing="20">
@@ -144,19 +144,19 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
 		<td>-</td>
 		<td>-</td>
-		<td>-</td>
-		<td>Linear Algebra (Auditorium 7)</td>
+		<td>Imperative Programming (Auditorium 7) (Kurt Normark)</td>
 		<td>-</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
-		<td>Problem Based Learning (Auditorium 7)</td>
+		<td>Imperative Programming (Lokale 3.14) (Kurt Normark)</td>
 		<td>-</td>
-		<td>Linear Algebra (Auditorium 6)</td>
 		<td>-</td>
-		<td>Problem Based Learning (Auditorium 6)</td>
+		<td>-</td>
+		<td>-</td>
 	</tr>
 </table>
 <table width="100.00%" cellspacing="20">
@@ -171,18 +171,18 @@
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
 		<td>-</td>
-		<td>Imperative Programming (Lokale 3.14)</td>
-		<td>Problem Based Learning (Lokale 3.14) [+Linear Algebra]</td>
+		<td>-</td>
+		<td>-</td>
 		<td>-</td>
 		<td>-</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
-		<td>Linear Algebra (Lokale 3.14)</td>
-		<td>Linear Algebra (Auditorium 6)</td>
 		<td>-</td>
-		<td>Linear Algebra (Auditorium 7)</td>
+		<td>-</td>
+		<td>-</td>
+		<td>Imperative Programming (Auditorium 7) (Kurt Normark)</td>
 	</tr>
 </table>
 <table width="100.00%" cellspacing="20">
@@ -196,19 +196,19 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
-		<td>Imperative Programming (Auditorium 6)</td>
 		<td>-</td>
 		<td>-</td>
+		<td>Problem Based Learning (Lokale 3.14) (Lars Peter Jensen)</td>
 		<td>-</td>
-		<td>Imperative Programming (Auditorium 7)</td>
+		<td>-</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
+		<td>Problem Based Learning (Auditorium 7) (Lars Peter Jensen)</td>
 		<td>-</td>
-		<td>Imperative Programming (Lokale 3.14)</td>
 	</tr>
 </table>
 <table width="100.00%" cellspacing="20">
@@ -222,7 +222,7 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
-		<td>Problem Based Learning (Auditorium 7) [+Linear Algebra]</td>
+		<td>-</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
@@ -230,8 +230,8 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
-		<td>Imperative Programming (Auditorium 6)</td>
 		<td>-</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
@@ -249,10 +249,10 @@
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
 		<td>-</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
+		<td>Problem Based Learning (Lokale 3.14) (Lars Peter Jensen) [+Linear Algebra]</td>
 		<td>-</td>
 		<td>-</td>
-		<td>-</td>
-		<td>Problem Based Learning (Lokale 3.14)</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
@@ -260,7 +260,7 @@
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
-		<td>Imperative Programming (Lokale 3.14)</td>
+		<td>-</td>
 	</tr>
 </table>
 <table width="100.00%" cellspacing="20">
@@ -274,19 +274,19 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
+		<td>Linear Algebra (Auditorium 7) (Jacob Broe)</td>
 		<td>-</td>
-		<td>-</td>
-		<td>Imperative Programming (Auditorium 7)</td>
+		<td>Imperative Programming (Auditorium 6) (Kurt Normark)</td>
 		<td>-</td>
 		<td>-</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
-		<td>Linear Algebra (Lokale 3.14)</td>
 		<td>-</td>
-		<td>Imperative Programming (Lokale 3.14)</td>
 		<td>-</td>
-		<td>Linear Algebra (Auditorium 7)</td>
+		<td>Problem Based Learning (Lokale 3.14) (Lars Peter Jensen)</td>
+		<td>Problem Based Learning (Auditorium 6) (Lars Peter Jensen)</td>
+		<td>-</td>
 	</tr>
 </table>
 <table width="100.00%" cellspacing="20">
@@ -300,18 +300,18 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
 		<td>-</td>
+		<td>Imperative Programming (Auditorium 7) (Kurt Normark)</td>
 		<td>-</td>
-		<td>-</td>
-		<td>-</td>
-		<td>-</td>
+		<td>Problem Based Learning (Lokale 3.14) (Lars Peter Jensen)</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
+		<td>Linear Algebra (Lokale 3.14) (Jacob Broe)</td>
 		<td>-</td>
-		<td>-</td>
-		<td>Linear Algebra (Lokale 3.14)</td>
+		<td>Imperative Programming (Auditorium 6) (Kurt Normark)</td>
 		<td>-</td>
 	</tr>
 </table>
@@ -327,18 +327,18 @@
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
 		<td>-</td>
-		<td>Linear Algebra (Lokale 3.14)</td>
 		<td>-</td>
 		<td>-</td>
-		<td>Linear Algebra (Auditorium 7)</td>
+		<td>-</td>
+		<td>-</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
+		<td>Linear Algebra (Auditorium 7) (Jacob Broe)</td>
+		<td>Problem Based Learning (Auditorium 7) (Lars Peter Jensen)</td>
 		<td>-</td>
 		<td>-</td>
-		<td>-</td>
-		<td>Linear Algebra (Auditorium 7)</td>
 	</tr>
 </table>
 <table width="100.00%" cellspacing="20">
@@ -352,16 +352,16 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
-		<td>Linear Algebra (Auditorium 7)</td>
-		<td>-</td>
-		<td>Problem Based Learning (Auditorium 6)</td>
 		<td>-</td>
 		<td>-</td>
+		<td>-</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
+		<td>Problem Based Learning (Auditorium 6) (Lars Peter Jensen)</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
-		<td>Problem Based Learning (Auditorium 6)</td>
+		<td>-</td>
 		<td>-</td>
 		<td>-</td>
 		<td>-</td>
@@ -379,17 +379,17 @@
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
 		<td>-</td>
-		<td>Imperative Programming (Auditorium 6)</td>
+		<td>-</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe) [+Linear Algebra] [+Imperative Programming]</td>
 		<td>-</td>
 		<td>-</td>
-		<td>Problem Based Learning (Lokale 3.14)</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
-		<td>Linear Algebra (Auditorium 6)</td>
 		<td>-</td>
-		<td>Linear Algebra (Lokale 3.14)</td>
 		<td>-</td>
+		<td>Linear Algebra (Auditorium 6) (Jacob Broe)</td>
+		<td>Linear Algebra (Auditorium 7) (Jacob Broe)</td>
 		<td>-</td>
 	</tr>
 </table>
@@ -404,19 +404,19 @@
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>08:15 - 12:00</td>
+		<td>Imperative Programming (Lokale 3.14) (Kurt Normark)</td>
+		<td>Imperative Programming (Auditorium 6) (Kurt Normark)</td>
+		<td>Problem Based Learning (Auditorium 6) (Lars Peter Jensen)</td>
 		<td>-</td>
 		<td>-</td>
-		<td>-</td>
-		<td>-</td>
-		<td>Imperative Programming (Auditorium 7)</td>
 	</tr>
 	<tr bgcolor="#F0F0F0">
 		<td>12:30 - 16:15</td>
 		<td>-</td>
-		<td>Linear Algebra (Auditorium 7)</td>
+		<td>Problem Based Learning (Auditorium 6) (Lars Peter Jensen)</td>
 		<td>-</td>
 		<td>-</td>
-		<td>Imperative Programming (Lokale 3.14)</td>
+		<td>-</td>
 	</tr>
 </table>
 <hr />
